change relationship between Users and Roles

--- a/adminka/adminka.csproj
+++ b/adminka/adminka.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200527005802_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200527005802_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
